created sound service + code cleaning

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             </intent-filter>
         </activity>
         <meta-data android:name="com.google.ar.core" android:value="required" />
+        <service android:name=".services.SoundService">
+        </service>
     </application>
 
 </manifest>
