--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
             android:windowSoftInputMode="adjustResize"/>
         <meta-data android:name="com.google.ar.core" android:value="required" />
         <service android:name=".services.SoundService"/>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCh1Gfjz5rNzb4tpocPc8v5BYQlOaKH2ys"/>
     </application>
 
 </manifest>
