--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
